[tool.poetry]
name = "goldrecovery"
version = "0.1.0"
description = ""
authors = ["6076paras <47757847+6076paras@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
jupyter = "^1.1.1"
lab = "^8.3"
scikit-learn = "^1.5.2"
pytest = "^8.3.4"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
lightgbm = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
monkeytype = "^23.3.0"
flask = "^3.1.0"
isort = "^5.13.2"
nbqa = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
